<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logo"
            android:padding="16dp"
            android:src="@drawable/bhukhad_logo" />

        <TextView
            android:id="@+id/oneLiner"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-32dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/proudly_made_at_lnmiit"
        android:textColor="@android:color/black"
        android:textSize="15sp" />
</RelativeLayout>