<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editUniqueID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unique_shop_number"
            android:inputType="textNoSuggestions"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="35sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="8"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="35sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="15"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:shadowColor="@android:color/black"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

</RelativeLayout>